Se agrego un archivo .html para poder modificar Las tareas. Tambien se agrego la api que se solicito.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="nav nav-pills flex-column flex-sm-row">
             <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="index.html">Inicio</a>
             <a class="flex-sm-fill text-sm-center nav-link link-light" href="todo.html">Tareas</a>
-            <a class="flex-sm-fill text-sm-center nav-link link-light" href="api.html">API</a>
+            <a class="flex-sm-fill text-sm-center nav-link link-light" href="boredAPI.html">BoredAPI</a>
             <span class="navbar-text" id="userNameSpan">
                 Ingresa tus datos.
             </span>
