--- a/updateTask.html
+++ b/updateTask.html
@@ -3,30 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Lista de tareas</title>
+    <title>Modificar tarea</title>
 </head>
 <body class="bg-dark text-white">
-    <div class="container mb-5">
-        <nav class="nav nav-pills flex-column flex-sm-row">
-            <a class="flex-sm-fill text-sm-center nav-link link-light" href="index.html">Inicio</a>
-            <a class="flex-sm-fill text-sm-center nav-link link-light active" aria-current="page" href="todo.html">Tareas</a>
-            <a class="flex-sm-fill text-sm-center nav-link link-light" href="boredAPI.html">BoredAPI</a>
-            <span class="navbar-text" id="userNameSpan">
-                Ingresa tus datos.
-            </span>
-        </nav>
-    </div>
-    <div class="container">
-        <h1>Lista de tareas</h1>
-    </div>
-    <div class="container mb-5" id="tasksDiv">
-        
-    </div>
     <div class="container">
         <fieldset>
-            <legend>Agregar Tarea</legend>
+            <legend>Modificar Tarea</legend>
             <form action="">
                 <div class="input-group mb-3">
                     <span class="input-group-text">Nombre</span>
@@ -49,11 +33,14 @@
                     </select>
                 </div>
                 <div class="mb-3">
-                    <button type="submit" class="btn btn-primary" id="addTaskButton">Guardar</button>
+                    <button type="submit" class="btn btn-primary" id="updateTaskButton">Guardar</button>
+                </div>
+                <div class="mb-3">
+                    <a class="btn btn-danger" href="todo.html">cancelar</a>
                 </div>
             </form>
         </fieldset>
     </div>
-    <script src="todo.js" type="text/javascript"></script>
+    <script src="update.js" type="text/javascript"></script>
 </body>
 </html>
