Agregado boton que permite cancelar la modificacion de datos

--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
                     <label for="emailInput" class="form-label">Email</label>
                     <input type="email" id="emailInput" class="form-control" required>
                 </div>
-                <div class="col-12">
+                <div class="col-md-auto">
                     <button type="submit" class="btn btn-primary" id="saveButton">Guardar</button>
+                </div>
+                <div class="col-md-auto">
+                    <button type="submit" class="btn btn-danger visually-hidden" id="cancelButton">Cancelar</button>
                 </div>
             </form>
         </fieldset>
