--- a/index.html
+++ b/index.html
@@ -88,6 +88,6 @@
             <button type="submit" class="btn btn-danger" id="deleteUserButton">Eliminar usuario</button>
         </div>
     </div>
-    <script src="main.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
