--- a/todo.html
+++ b/todo.html
@@ -54,6 +54,6 @@
             </form>
         </fieldset>
     </div>
-    <script src="todo.js" type="text/javascript"></script>
+    <script src="js/todo.js" type="text/javascript"></script>
 </body>
 </html>
