--- a/updateTask.html
+++ b/updateTask.html
@@ -36,11 +36,11 @@
                     <button type="submit" class="btn btn-primary" id="updateTaskButton">Guardar</button>
                 </div>
                 <div class="mb-3">
-                    <a class="btn btn-danger" href="todo.html">cancelar</a>
+                    <a class="btn btn-danger" href="../todo.html">cancelar</a>
                 </div>
             </form>
         </fieldset>
     </div>
-    <script src="update.js" type="text/javascript"></script>
+    <script src="js/update.js" type="text/javascript"></script>
 </body>
 </html>
