Error de redireccionamiento al cancelar mod

--- a/updateTask.html
+++ b/updateTask.html
@@ -36,7 +36,7 @@
                     <button type="submit" class="btn btn-primary" id="updateTaskButton">Guardar</button>
                 </div>
                 <div class="mb-3">
-                    <a class="btn btn-danger" href="../todo.html">cancelar</a>
+                    <a class="btn btn-danger" href="./todo.html">cancelar</a>
                 </div>
             </form>
         </fieldset>
