Poner los botones de la pag. de modificacion en la misma fila

--- a/updateTask.html
+++ b/updateTask.html
@@ -32,11 +32,13 @@
                         <option value="baja">Baja</option>
                     </select>
                 </div>
-                <div class="mb-3">
-                    <button type="submit" class="btn btn-primary" id="updateTaskButton">Guardar</button>
-                </div>
-                <div class="mb-3">
-                    <a class="btn btn-danger" href="./todo.html">cancelar</a>
+                <div class="row">
+                    <div class="col-md-auto mb-3">
+                        <button type="submit" class="btn btn-primary" id="updateTaskButton">Guardar</button>
+                    </div>
+                    <div class="col-md-auto mb-3">
+                        <a class="btn btn-danger" href="./todo.html">cancelar</a>
+                    </div>
                 </div>
             </form>
         </fieldset>
