Cambios menores en la pagina principal

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <legend>Datos del usuario</legend>
             <form class="row g-3">
                 <div class="col-md-6">
-                    <label class="form-label" for="nameInput">Nombre</label>
+                    <label class="form-label" for="nameInput">Nombre(s)</label>
                     <input type="text" class="form-control" id="nameInput" pattern="[A-Za-z\u00C0-\u00FF\s]{3,}">
                 </div>
                 <div class="col-md-6">
-                    <label class="form-label" for="lastNameInput">Apellido</label>
+                    <label class="form-label" for="lastNameInput">Apellido(s)</label>
                     <input type="text" class="form-control" id="lastNameInput" pattern="[A-Za-z\u00C0-\u00FF\s]{3,}">
                 </div>
                 <div class="col-md-6">
@@ -74,7 +74,7 @@
             </div>
             <div class="row">
                 <div class="col col-md-auto">
-                    <p>Apellido</p>
+                    <p>Apellido(s)</p>
                 </div>
                 <div class="col col-md-auto">
                     <p id="lastNameP"></p>
