Cambios en el nav para que salga la pagina de info

--- a/boredAPI.html
+++ b/boredAPI.html
@@ -12,7 +12,8 @@
         <nav class="nav nav-pills flex-column flex-sm-row">
             <a class="flex-sm-fill text-sm-center nav-link link-light " href="index.html">Inicio</a>
             <a class="flex-sm-fill text-sm-center nav-link link-light" href="todo.html">Tareas</a>
-            <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="boredAPI.html">BoredAPI</a>
+            <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="boredAPI.html" style="background-color: #6f42c1;">BoredAPI</a>
+            <a class="flex-sm-fill text-sm-center nav-link link-light" href="info.html" >Información</a>
             <span class="navbar-text" id="userNameSpan">
                 Ingresa tus datos.
             </span>
