--- a/todo.html
+++ b/todo.html
@@ -11,8 +11,9 @@
     <div class="container mb-5">
         <nav class="nav nav-pills flex-column flex-sm-row">
             <a class="flex-sm-fill text-sm-center nav-link link-light" href="index.html">Inicio</a>
-            <a class="flex-sm-fill text-sm-center nav-link link-light active" aria-current="page" href="todo.html">Tareas</a>
+            <a class="flex-sm-fill text-sm-center nav-link link-light active" aria-current="page" href="todo.html" style="background-color: #6f42c1;">Tareas</a>
             <a class="flex-sm-fill text-sm-center nav-link link-light" href="boredAPI.html">BoredAPI</a>
+            <a class="flex-sm-fill text-sm-center nav-link link-light" href="info.html" >Información</a>
             <span class="navbar-text" id="userNameSpan">
                 Ingresa tus datos.
             </span>
