--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body class="bg-dark text-white">
     <div class="container mb-5">
         <nav class="nav nav-pills flex-column flex-sm-row">
-            <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="index.html">Inicio</a>
+            <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" href="index.html" style="background-color: #6f42c1;">Inicio</a>
             <a class="flex-sm-fill text-sm-center nav-link link-light" href="todo.html">Tareas</a>
             <a class="flex-sm-fill text-sm-center nav-link link-light" href="boredAPI.html">BoredAPI</a>
+            <a class="flex-sm-fill text-sm-center nav-link link-light" href="info.html" >Información</a>
             <span class="navbar-text" id="userNameSpan">
                 Ingresa tus datos.
             </span>
