--- a/boredAPI.html
+++ b/boredAPI.html
@@ -19,6 +19,10 @@
             </span>
         </nav>
     </div>
+    <div class="alert alert-danger alert-dismissible fade show visually-hidden" role="alert">
+        <strong>No es valido</strong> El valor ingresado no es correcto.
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
     <div class="container mb-5">
         <h1>BoredAPI</h1>
         <h5>Muestra una actividad, por el número de participantes enviado</h5>
